# AlphaClaw

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  AlphaClaw.ps1  AlphaClaw.sh  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  bunfig.toml  compose.development.yml  compose.yml  docker-compose.yml  package.json  pyproject.toml
.github/: FUNDING.yml  labeler.yml
.github/workflows/: auto-response.yml  ci.yml  deploy.yml  formal-conformance.yml  install-smoke.yml
alembic/: env.py
docs/: MySQL.md  PRD.md
src/alphaclaw/: __main__.py  config.py  main.py
src/alphaclaw/agent/: agent.py  loop.py  prompts.py  tools.py
src/alphaclaw/channels/: api.py  base.py  discord_.py  slack_.py  teams.py  telegram.py  web.py
src/alphaclaw/data/: base.py  polygon.py  sec.py  yfinance.py
src/alphaclaw/llm/: __init__.py  anthropic_.py  base.py  bedrock_.py  google_.py  litellm_.py  mistral_.py  openai_.py  registry.py
src/alphaclaw/scheduler/: briefs.py
src/alphaclaw/storage/: db.py  models.py  r2.py  repo.py
tests/: test_agent.py  test_channels.py  test_data.py
tests/test_llm/: test_conversions.py  test_registry.py
web/: Dockerfile  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
web/src/components/common/: TurnstileProvider.tsx
web/src/integrations/tanstack-query/: root-provider.tsx
web/src/lib/: antibot.ts  turnstile.ts
web/src/routes/: __root.tsx
