[project]
name = "alphaclaw"
version = "0.1.0"
description = "OpenClaw-inspired agentic financial assistant for market intelligence and earnings analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # LLM
    "litellm>=1.50",
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    # Channels
    "python-telegram-bot>=21.0",
    "discord.py>=2.4",
    "slack-bolt>=1.21",
    "botbuilder-core>=4.16",
    # Database
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    # Validation / Settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Scheduling
    "apscheduler>=3.10,<4",
    # Financial data (free)
    "yfinance>=0.2",
    "sec-edgar-downloader>=5.0",
    # Financial data (premium)
    "polygon-api-client>=1.14",
    # Utilities
    "httpx>=0.28",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
mistral = ["mistralai>=1.0"]
bedrock = ["boto3>=1.35"]
all-llm = [
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mistralai>=1.0",
    "boto3>=1.35",
]

[project.scripts]
alphaclaw = "alphaclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mistralai>=1.0",
    "boto3>=1.35",
]
