[project]
name = "alphaclaw"
version = "0.1.0"
description = "OpenClaw-inspired agentic financial assistant for market intelligence and earnings analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # LLM
    "pydantic-ai",
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    # Channels
    "python-telegram-bot>=21.0",
    "discord.py>=2.4",
    "slack-bolt>=1.21",
    "botbuilder-core>=4.16",
    # Database
    "aiomysql>=0.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    # Validation / Settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Scheduling
    "apscheduler>=3.10,<4",
    # Financial data (free)
    "yfinance>=0.2",
    "sec-edgar-downloader>=5.0",
    # Financial data (premium)
    "polygon-api-client>=1.14",
    # Object storage (Cloudflare R2 via S3 API)
    "aioboto3>=13.0",
    # Utilities
    "httpx>=0.28",
]

[project.scripts]
alphaclaw = "alphaclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaclaw"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
]
